[package]
name = "cracking_the_coding_interview_rust"
version = "0.1.0"
authors = ["Lind, Niclas <niclas.lind@volvocars.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench_main"
harness = false