[package]
name = "lib-chapter01"
version = "0.1.0"
authors = ["Lind, Niclas <niclas.lind@volvocars.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.3"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "chapter01_bench"
harness = false
